--- a/src/style.css
+++ b/src/style.css
@@ -9,14 +9,14 @@ body{
 }
 
 /* Estilos para el tema light */
-body.light {
+body.Light {
     background-color: #f5f5f5;
     color: #333;
     transition: all 0.3s ease;
 }
 
 /* Estilos para el tema dark */
-body.dark {
+body.Dark {
     background-color: #2c2c2c;
     color: white;
     transition: all 0.3s ease;
